--- a/dsgn.html
+++ b/dsgn.html
@@ -9,63 +9,10 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	
 	<script type="text/javascript" src="DSGN.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 
 
-	<style>  
-	#Thelittlegirl{
-		background-image:url(https://upload.wikimedia.org/wikipedia/commons/4/47/Mary_had_a_little_lamb_2_-_WW_Denslow_-_Project_Gutenberg_etext_18546.jpg);
-
-		background-color:#444;
-		
-		border: solid 10px rgba(255,200,40,.5);
-		width: 50%;
-		height: 400px;
-		padding: 10px 20px;
-		border: 15px solid transparent;
-		/*position: absolute;*/
-		float:left;
-		
-
-	
-	}
-
-	#text-content {
-		position:absolute;
-
-	}
-
-</style>
-
-<style>
-	#WilliamWallaceDenslow{
-		background-image:url(https://upload.wikimedia.org/wikipedia/commons/7/77/Mary_had_a_little_lamb_1_-_WW_Denslow_-_Project_Gutenberg_etext_18546.jpg);
-
-		background-color:#444;
-		margin: 0px;
-		border: solid 10px rgba(255,90,40,.5);
-		width: 30%;
-		height: 80px;
-		padding: 10px 20px;
-		border: 15px solid transparent;
-		float: left;
-		opacity:  1;
-		
-
-		
-		
-	}
-
-	#text-content {
-		 float: right;
-		 width: 80%;
-	}
-	#navbar{
-		 float: right;
-		 width: 200%;
-	}
-
-</style>
 
 
 </head>
@@ -77,14 +24,31 @@
 	<p> "Mary Had a Little Lamb" is an English language nursery rhyme of nineteenth-century American origin. It has a Roud Folk Song Index number of 7622.</p>
 
 <div id="Thelittlegirl">
-	<div> Mary Had a Little Lamb </div>
-	<div>Navigation</div>
+	<div> 1 </div>
+	
 </div>
 
 <div id="WilliamWallaceDenslow">
-	<div id="text-content"> Mary Had a Little Lamb </div>
-	<div id="navbar">Navigation</div>
+	<div> 2 </div>
+	
 </div>
+
+<div id="hell03">
+	<div> 3 </div>
+	
+</div>
+
+<br>
+
+<div id="hell04" class="hell04">
+	<div> 4 </div>
+	
+</div>
+<div id="hell05" class="hell0">
+	<div> 4 </div>
+	
+</div>
+
 
 
 
