--- a/chat/chat_client.html
+++ b/chat/chat_client.html
@@ -10,25 +10,38 @@
 
 </head>
 <body>
+
+
 <div id="chat-meta">
 <input type="text" id="chat-name"> 
 <button id= "chart-start">Start chatting </button>
-<button id="chart-start">Free Call</button>
+
+</div>
 
 <div id="chat-log">
   <ul>
-
-
     
   </ul>
 </div>
+
+
 <form id="chat-form">
 <fieldset>
     <input type="text" id="chat-input">
     <button>Send</button>
 </fieldset>
 </form>
-  
+
+
+
+<form id="emoji-box">
+<input id="emoji01" value="n01" type="image" src="http://vignette1.wikia.nocookie.net/coconut-fred-and-wonder-pets-and-murps/images/f/f9/Emoji_moon.png/revision/latest?cb=20140923000041" width="40" height="40">
+<input id="emoji02" value="n02" type="image" src="https://pbs.twimg.com/media/CdcUhWbVAAA44TW.png" width="40" height="40">
+<button>Emoji</button>
+</form>
+
+
+
 </body>
 </html>
 
